--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -309,7 +309,7 @@ a {
 .menuButtonsLeft {
     display: flex;
     justify-content: center;
-    gap: 3.125em;
+    gap: 2.6vw;
 }
 
 .navItemLeft {
@@ -320,7 +320,15 @@ a {
     font-size: 0.85vw;
     font-style: normal;
     font-weight: 400;
-    line-height: 145%; /* 23.2px */
+
+    border-radius: 1.04vw;
+
+    padding: 0.78125vw 1.04vw;
+    transition: 0.3s all ease;
+}
+.navItemLeft:hover{
+    transition: 0.3s all ease;
+    background: rgba(106, 106, 118, 0.12);
 }
 
 @media screen and (max-width: 1000px) {
