--- a/client/src/components/Player/Player.module.css
+++ b/client/src/components/Player/Player.module.css
@@ -1,18 +1,18 @@
 .player{
-    margin-top: 420px;
-    width: 650px;
-    height: 120px;
+    margin-top: 21.875vw;
+    width: 33.85vw;
+    height: 6.25vw;
     border-radius: 24px;
     background: rgba(255, 255, 255, 0.02);
     backdrop-filter: blur(10px);
     display: flex;
     align-items: center;
-    margin-bottom: 100px;
+    margin-bottom: 5.2vw;
 
 }
 .button{
-    width: 70px;
-    height: 70px;
+    width: 3.64vw;
+    height: 3.64vw;
     background: rgba(255, 255, 255, 0.05);
     stroke-width: 1px;
     stroke: #141414;
@@ -20,7 +20,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 50px;
-    margin-left: 30px;
+    margin-left: 1.5625vw;
     border: 0;
     cursor: pointer;
 }
@@ -29,7 +29,7 @@
 }
 .waveform{
     position: absolute;
-    width: 500px;
-    left: 120px;
+    width: 26vw;
+    left: 6.25vw;
 
 }
