update model page

--- a/client/src/components/Player/Player.module.css
+++ b/client/src/components/Player/Player.module.css
@@ -1,5 +1,6 @@
 .player{
-    margin-top: 21.875vw;
+    /*margin-top: 21.875vw;*/
+    margin-top: 1.83vw;
     width: 33.85vw;
     height: 6.25vw;
     border-radius: 24px;
