--- a/client/src/components/SearchModal/SearchModal.module.css
+++ b/client/src/components/SearchModal/SearchModal.module.css
@@ -29,9 +29,9 @@
     width: 44.79vw;
     height: 26.875vw;
     border-radius: 1.25rem;
-    border: 1px solid #79A1DD;
-    background: #030304;
-    /*background: rgba(4, 5, 6, 0.60);*/
+    /*border: 1px solid #79A1DD;*/
+    /*background: #030304;*/
+    background: rgba(4, 5, 6, 0.60);
     backdrop-filter: blur(12px);
     position: absolute;
     top: 50%;
@@ -112,6 +112,7 @@
     left: 0;
     right: 0;
     bottom: 0;
+    /*border-radius: 20px;*/
     background: linear-gradient(49deg, rgba(106, 106, 118, 0.12) 35.24%, rgba(255, 255, 255, 0.10) 103.52%);
     opacity: 0;
     transition: all 0.3s ease;
@@ -122,7 +123,8 @@
 }
 
 .game:hover {
-    backdrop-filter: blur(10px);
+    /*backdrop-filter: blur(12px);*/
+
 }
 
 .activeGame {
