--- a/client/src/pages/Auth/Auth.module.css
+++ b/client/src/pages/Auth/Auth.module.css
@@ -1,5 +1,5 @@
 .background {
-    background: url("../../../public/auth/back.png") lightgray 50% / cover no-repeat;
+    background: url("../../../public/auth/back.jpg") lightgray 50% / cover no-repeat;
 }
 .backgroundImage {
     position: absolute;
@@ -15,10 +15,11 @@
     display: flex;
     height: 100vh;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
     font-family: "Nunito", sans-serif;
     font-size: 1.5em;
+    margin-left: 6.25vw;
 }
 
 .title {
@@ -36,7 +37,7 @@
     align-items: center;
     gap: 1.3vw;
     border-radius: 1.66vw;
-    border: 1px solid #000;
+
     background: rgba(4, 5, 6, 0.65);
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.50);
     backdrop-filter: blur(16px);
