--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -105,11 +105,19 @@ a {
     line-height: 135%;
     background: transparent;
     cursor: pointer;
+    transition: 0.3s all ease;
 }
-
+.search:hover{
+    border: 1px solid rgba(255, 255, 255, 0.10);
+    transition: 0.3s all ease;
+    color: #D9D9D9;
+}
 .search img {
     width: 1em;
-
+    /*filter: brightness(0) saturate(100%) invert(100%) sepia(1%) saturate(100%) hue-rotate(34deg) brightness(109%) contrast(70%);*/
+    /*filter: brightness(0) saturate(100%) invert(99%) sepia(8%) saturate(11%) hue-rotate(325deg) brightness(109%) contrast(70%);*/
+    /*filter: brightness(0) saturate(100%) invert(85%) sepia(0%) saturate(189%) hue-rotate(198deg) brightness(95%) contrast(115%);*/
+    filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(7500%) hue-rotate(256deg) brightness(113%) contrast(104%);
 }
 
 .profileBack {
