--- a/client/src/pages/Main/HeaderHomePage/HeaderHomePage.module.css
+++ b/client/src/pages/Main/HeaderHomePage/HeaderHomePage.module.css
@@ -1,9 +1,8 @@
 .header {
-    padding-top: 10px;
-    height: calc(100vh - 5.5vw);
+
     width: 100%;
     /*background-image: url("../../../../public/home-background.png");*/
-    background: url("../../../../public/home/background.jpg") center;
+    /*background: url("../../../../public/home/background.jpg") center;*/
     background-size: cover;
     color: white;
     font-family: 'Nunito', sans-serif;
@@ -14,12 +13,23 @@
     border-radius: 2rem;
 }
 
+.back {
+    position: absolute;
+    width: 100%;
+    z-index: 0;
+}
+.back img{
+    border-radius: 2rem;
+}
+
 .headerContent {
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
     text-align: center;
+    height: calc(100vh - 5.5vw);
+    position: relative;
+
 }
 
 .headMessage {
@@ -75,9 +85,10 @@
     line-height: 145%;
 }
 
-.playButton img{
+.playButton img {
     width: 0.83vw;
 }
+
 .left {
     position: absolute;
     left: 33.5%;
@@ -86,7 +97,7 @@
     height: 3vw;
     backdrop-filter: blur(10px);
     margin: 0;
-    padding: 0  ;
+    padding: 0;
     border-radius: 1.2rem;
     transform: rotate(10deg);
 }
@@ -99,7 +110,7 @@
     height: 3vw;
     backdrop-filter: blur(10px);
     margin: 0;
-    padding: 0  ;
+    padding: 0;
     border-radius: 1.2rem;
     transform: rotate(-10deg);
 }
@@ -112,25 +123,30 @@
         background-size: cover;
         border-radius: 2rem;
     }
-    .headMessage{
+
+    .headMessage {
         font-size: 1.75rem;
         margin-top: 3.5rem;
     }
-    .underHeadMessage{
+
+    .underHeadMessage {
         font-size: 1rem;
         width: 16rem !important;
         font-weight: 400;
     }
-    .playButton{
+
+    .playButton {
         width: 9rem;
         height: 3.125rem;
         font-size: 1rem;
         font-weight: 400;
     }
-    .playButton img{
+
+    .playButton img {
         width: 1rem;
         height: 1rem;
     }
+
     /*.right{*/
     /*    width: 3.875rem;*/
     /*    height: 2.1875rem;*/
@@ -145,10 +161,11 @@
     /*    left: 15%;*/
     /*    top: 58%;*/
     /*}*/
-    .right{
+    .right {
         display: none;
     }
-    .left{
+
+    .left {
         display: none;
     }
 }
