--- a/client/src/pages/Profile.module.css
+++ b/client/src/pages/Profile.module.css
@@ -231,7 +231,7 @@
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    background: linear-gradient(201deg, #FFF 4.92%, #603E76 86.12%);
+    background: linear-gradient(184deg, #829FCA 3.46%, #FFF 96.97%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
