--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -237,22 +237,23 @@ a {
 .currencyContainer {
     display: flex;
     align-items: center;
-    height: 2.1875rem;
-    padding: 0 0.5rem;
+    height: 1.82vw;
+    padding: 0 0.41vw;
     justify-content: center;
-    gap: 0.3125rem;
-    border-radius: 0.75rem;
+    gap: 0.26vw;
+    border-radius: 0.625vw;
     background: rgba(106, 106, 118, 0.12);
     backdrop-filter: blur(10px);
+    margin-right: 1.5vw;
 }
 
 .currency {
-    margin-left: 4px;
-    margin-right: 2px;
+    margin-left: 0.2vw;
+    margin-right: 0.1vw;
 
     color: #77EF19;
-    font-family: Onest, sans-serif;
-    font-size: 1.25rem;
+    font-family: sans-serif, sans-serif;
+    font-size: 1.04vw;
     font-style: normal;
     font-weight: 500;
     line-height: 145%;
